# training-arc

rustlings/.zed/: settings.json
rustlings/exercises/04_primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/05_vecs/: vecs2.rs
rustlings/exercises/07_structs/: structs1.rs
rustlings/exercises/11_hashmaps/: hashmaps1.rs
rustlings/exercises/12_options/: options1.rs
rustlings/exercises/17_tests/: tests1.rs  tests2.rs
rustlings/exercises/18_iterators/: iterators2.rs  iterators5.rs
rustlings/exercises/19_smart_pointers/: arc1.rs
rustlings/exercises/20_threads/: threads2.rs  threads3.rs
rustlings/exercises/22_clippy/: clippy1.rs  clippy2.rs
rustlings/exercises/23_conversions/: from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/quizzes/: quiz2.rs
sandbox/: Cargo.toml
sandbox/src/: commands.rs  lib.rs  logging.rs  main.rs  utils.rs
sandbox/src/commands/: daily_temperature.rs  rotating_list.rs  schedule.rs  sufficient_coverage_set.rs
sandbox/test/assets/: schedule.json  sufficient_coverage_set.json
