[package]
name = "dat_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
log = "0.4.27"                                       # logging API
log4rs = "1.3.0"                                     # logging interface
serde = "1.0.219"                                    # Serialization and deserialization library
serde_json = "1.0.140"                               # JSON serialization and deserialization library
